<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="1"
        android:title="@string/text_menu_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_orders"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/text_menu_my_orders"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/text_menu_settings" />

    <item
        android:id="@+id/menu_sign_out"
        app:showAsAction="never"
        android:orderInCategory="201"
        android:title="@string/text_menu_sign_out" />

</menu>