<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_new_product"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:orderInCategory="1"
        android:title="@string/text_menu_new_product"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_orders"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/text_menu_orders"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="200"
        app:showAsAction="never"
        android:title="@string/text_menu_settings" />
    <item
        android:id="@+id/menu_sign_out"
        app:showAsAction="never"
        android:orderInCategory="201"
        android:title="@string/text_menu_sign_out" />
</menu>