<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SettingsCompanyActivity">

    <include
        android:id="@+id/includeToolbar"
        layout="@layout/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/includeToolbar"
        app:layout_constraintVertical_bias="0.3">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:src="@color/colorAccent" />

        <EditText
            android:id="@+id/editProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/background_input_text"
            android:ems="10"
            android:hint="@string/text_announce_name"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/editCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/background_input_text"
            android:ems="10"
            android:hint="@string/text_announce_category"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <com.blackcat.currencyedittext.CurrencyEditText
            android:id="@+id/editDeliveryTax"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/background_input_text"
            android:ems="10"
            android:hint="@string/text_announce_price"
            android:inputType="numberDecimal"
            android:padding="10dp" />

        <EditText
            android:id="@+id/editDeliveryTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/background_input_text"
            android:ems="10"
            android:hint="@string/text_delivery_time"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <Button
            android:id="@+id/buttonUpdateProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registerAnnouncement"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="32dp"
            android:text="@string/text_btn_update_prof"
            android:theme="@style/myStandardButton"
            android:textColor="@android:color/white" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>