<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/myRed"
    tools:context=".activity.AuthenticationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/logo" />


        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/background_input_text"
            android:backgroundTint="@android:color/white"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColorHint="@color/myGray" />

        <EditText
            android:id="@+id/editPW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/background_input_text"
            android:backgroundTint="@android:color/white"
            android:hint="@string/text_password"
            android:inputType="text|textPassword"
            android:padding="8dp"
            android:textColorHint="@color/myGray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textButtonSwitchSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_sign_in"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/switchType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:buttonTint="@android:color/white"
                android:thumbTint="@android:color/white"
                android:trackTint="@android:color/white" />

            <TextView
                android:id="@+id/textButtonSwitchReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_register"
                android:textSize="16sp" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/typeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioBtnCustomer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:checked="true"
                android:text="Customer"
                android:textColor="@android:color/white"
                android:theme="@style/MyRadioButton"
                />

            <RadioButton
                android:id="@+id/radioBtnCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:checked="false"
                android:text="Company"
                android:textColor="@color/colorAccent"
                android:theme="@style/MyRadioButton"
                />
        </RadioGroup>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="32dp"
            android:backgroundTint="@color/colorAccent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/text_access"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:theme="@style/myStandardButton" />



    </LinearLayout>


</LinearLayout>