<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_input_text"
            android:padding="4dp"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civRestaurantImage"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:src="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textRestName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:padding="2dp"
                    android:textSize="16sp"
                    android:text="@string/text_announce_name"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textRestCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:padding="2dp"
                        android:textSize="13sp"
                        android:textStyle="italic"
                        android:text="@string/text_announce_category"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="4dp"
                            android:layout_height="2dp"
                            app:srcCompat="@android:color/darker_gray" />

                    </LinearLayout> <!-- DIVISOR VIEW -->

                    <TextView
                        android:id="@+id/textRestDelivTime"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:layout_gravity="bottom"
                        android:text="@string/text_deliv_time"
                        android:textSize="13sp"
                        android:textStyle="italic"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="4dp"
                            android:layout_height="2dp"
                            app:srcCompat="@android:color/darker_gray" />

                    </LinearLayout> <!-- DIVISOR VIEW -->

                    <TextView
                        android:id="@+id/textRestDelivTax"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="8dp"
                        android:gravity="center_vertical"
                        android:layout_gravity="bottom"
                        android:text="@string/text_announce_price"
                        android:textSize="13sp"
                        android:textStyle="italic"/>

                </LinearLayout>


            </LinearLayout>



        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>
