<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:orientation="vertical">






        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:padding="2dp"
                android:textSize="13sp"
                android:textStyle="italic"
                android:text="@string/text_announce_category"/>

            <!-- DIVISOR VIEW -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="4dp"
                    android:layout_height="2dp"
                    app:srcCompat="@android:color/darker_gray" />

            </LinearLayout>

            <TextView
                android:id="@+id/textRestDelivTime"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_gravity="bottom"
                android:text="@string/text_deliv_time"
                android:textSize="13sp"
                android:textStyle="italic"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:padding="2dp"
                android:textSize="13sp"
                android:textStyle="italic"
                android:text="@string/text_announce_category"/>

            <!-- DIVISOR VIEW -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:gravity="center">

                <ImageView
                    android:layout_width="4dp"
                    android:layout_height="2dp"
                    app:srcCompat="@android:color/darker_gray" />

            </LinearLayout>

            <TextView
                android:id="@+id/textRestDelivTax"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:gravity="center_vertical"
                android:layout_gravity="bottom"
                android:text="@string/text_announce_price"
                android:textSize="13sp"
                android:textStyle="italic"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>