<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:id="@+id/textOrderProdName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:padding="2dp"
                android:text="@string/text_announce_name"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="4dp"
                    android:padding="2dp"
                    android:gravity="bottom"
                    android:text="X"
                    android:textColor="@android:color/black"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textOrderProdQt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2.3"
                    android:gravity="bottom"
                    android:maxHeight="60dp"
                    android:padding="2dp"
                    android:text="@string/text_zero"
                    android:textColor="@android:color/black"
                    android:textSize="13sp"
                    android:textStyle="bold" />



                <ImageView
                    android:layout_width="4dp"
                    android:layout_height="2dp"
                    android:layout_marginTop="3dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@android:color/black"/>

            <TextView
                android:id="@+id/textOrderPartialPrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="8dp"
                android:layout_weight="1.8"
                android:gravity="end|bottom"
                android:padding="2dp"
                android:text="@string/text_announce_price"
                android:textColor="@color/myGreen"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginRight="4dp"
            android:layout_marginLeft="4dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>


</androidx.cardview.widget.CardView>